--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,16 @@
-@font-face {
+/* @font-face {
   font-family: 'neue haas' ;
   src: url(./NeueHaasDisplayMediu.ttf);
-}
+} */
 
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'neue haas';
+  font-family: "Roboto Slab", serif;
+  font-optical-sizing: auto;
+  font-weight:600;
+  font-style: normal;
 }
 
 html , body{
