--- a/src/Components/Result/Result.css
+++ b/src/Components/Result/Result.css
@@ -2,7 +2,7 @@
 .Result-wrapper {
     width: 100%;
     display: flex;
-    /* flex-wrap: wrap; */
+    flex-wrap: wrap;
     align-items: flex-start;
     justify-content: center;
     gap: 1vw;
@@ -11,8 +11,8 @@
 
 .article-container {
     width: 30%; /* Adjust width to fit within the container with gap */
-    /* max-width: 300px; */
-    height: 500px; /* Set a fixed height for the article container */
+    /* max-width: 500px; */
+    height: 500px; 
     border: none;
     border-radius: 30px;
     padding: 20px;
@@ -86,15 +86,15 @@ margin-top: 50px;
     }
 
     .article h3{
-        font-size: 2.2vw;
+        font-size: 2vw;
     }
 
     .article p{
-        font-size: 2vw;
+        font-size: 1.8vw;
     }
 
     .article a{
-        font-size: 2vw;
+        font-size: 1.8vw;
     }
 }
 
@@ -112,7 +112,7 @@ margin-top: 50px;
     }
 
     .article h3 {
-        font-size: 5vw; /* Adjust font size for smaller screens */
+        font-size: 4.5vw; /* Adjust font size for smaller screens */
     }
 
     .article p {
