--- a/src/Components/Result/Result.css
+++ b/src/Components/Result/Result.css
@@ -103,6 +103,7 @@ margin-top: 50px;
         flex-direction: column;
         align-items: center;
         width: 100%;
+        margin-top: 10px;
     }
 
     .article-container {
