--- a/src/Components/InputForm/InputForm.css
+++ b/src/Components/InputForm/InputForm.css
@@ -8,7 +8,8 @@
     text-transform: uppercase;
     font-size: 3.5vw;
     margin-bottom: 10px;
-    color: #d8d6d6;
+    /* color: #d8d6d6; */
+    color: black;
 }
 
 .search-form {
