--- a/src/Components/InputForm/InputForm.css
+++ b/src/Components/InputForm/InputForm.css
@@ -8,7 +8,6 @@
     text-transform: uppercase;
     font-size: 3.5vw;
     margin-bottom: 10px;
-    /* color: #d8d6d6; */
     color: black;
 }
 
@@ -20,7 +19,6 @@
 
 .InputForm-wrapper input[type="text"]::placeholder {
     font-size: 20px;
-    /* Adjust the font size as per your design */
     text-align: center;
 }
 
@@ -36,7 +34,7 @@
     height: 40px;
     border-radius: 20px;
     padding: 10px 15px;
-    padding-right: 45px; /* Add padding to the right for the button */
+    padding-right: 45px; 
     font-size: 1rem;
     border: 1px solid #ccc;
     transition: border-color 0.3s ease;
